syntax = "proto3";
option go_package = "github.com/eugenshima/myapp";

message Person {
    string id = 1;
    string name = 2;
    int64 age = 3;
    bool isHealthy = 4;
}

service personHandler {
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
    rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc UploadImage(stream UploadImageRequest) returns (stream UploadImageResponse) {}
    rpc DownloadImage(stream downloadImageRequest) returns (stream downloadImageResponse) {}
}

message downloadImageRequest {
    bytes image = 1;
    string name = 2;
}

message downloadImageResponse {

}

message UploadImageRequest {
    string name = 1;
}

message UploadImageResponse {
    bytes image = 1;
}

// GetByID Request/Response
message GetByIDRequest{
    string id = 1; 
}
message GetByIDResponse {
    Person person = 1;
}

// GetAll Request/Response
message GetAllRequest {

}
message GetAllResponse {
    repeated Person person = 1;
}

// Delete Request/Response
message DeleteRequest {
    string id = 1;
}
message DeleteResponse {
  string id = 1;
}

// Create Request/Response
message CreateRequest {
    Person person = 1;
}
message CreateResponse {
    string id = 1;
}

// Update Request/Response
message UpdateRequest {
   string id = 1;
   Person person = 2;
}
message UpdateResponse {
    string id = 1;
}



service userHandler {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
    rpc GetAll(UserGetAllRequest) returns (UserGetAllResponse) {}
    rpc RefreshTokenPair(RefreshTokenPairRequest) returns (RefreshTokenPairResponse) {}
    rpc Delete(UserDeleteRequest) returns (UserDeleteResponse) {}
}

message User {
    string id = 1;
    string login = 2;
    string password = 3;
    string role = 4;
    string refreshToken = 5;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    AccessRefresh accessRefresh = 1;
}

message AccessRefresh {
    string accessToken = 1;
    string refreshToken = 2;
}

message SignUpRequest {
    string login = 1;
    string password = 2;
    string role = 3;
}

message SignUpResponse {}

message UserGetAllResponse {
    repeated User user = 1;
}

message UserGetAllRequest {}

message RefreshTokenPairRequest {
    string id = 1;
    AccessRefresh accessRefresh = 2;
}

message RefreshTokenPairResponse {
    AccessRefresh accessRefresh = 1;
}

message UserDeleteRequest {
    string id = 1;
}

message UserDeleteResponse {
    string id = 1;
}